Revert "Generate docs"
This reverts commit 17e13b935bc62f75a3d62f205c444fab34f26bb8.

--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -1,1 +1,16 @@
-{  "name": "Test task node server",  "version": "1.0.0",  "description": "Fullstack JS / TS developer test task basic app",  "title": "Test task node server",  "url": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2019-01-17T19:25:12.733Z",    "url": "http://apidocjs.com",    "version": "0.17.6"  }}
+{
+  "name": "Test task node server",
+  "version": "1.0.0",
+  "description": "Fullstack JS / TS developer test task basic app",
+  "title": "Test task node server",
+  "url": "",
+  "sampleUrl": false,
+  "defaultVersion": "0.0.0",
+  "apidoc": "0.3.0",
+  "generator": {
+    "name": "apidoc",
+    "time": "2018-04-19T13:17:15.400Z",
+    "url": "http://apidocjs.com",
+    "version": "0.17.6"
+  }
+}
